--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "numpy>=1.24.0",
     "plotly>=5.18.0",
     "pydantic>=2.0.0",
+    "tzdata>=2023.3",
 ]
 
 [project.optional-dependencies]
